objects/Reference__c.object
<CustomObject>
    <description>This object store data about devices. All users have read only access.</description>
    <fields>
        <fullName>ptt_ALI__c</fullName>
        <formula>ptt_Device__r.sf42_gl_ALI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ALI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ptt_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>References</relationshipLabel>
        <relationshipName>References</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ptt_CM__c</fullName>
        <formula>ptt_Device__r.sf42_gl_NDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ptt_Competition_Device__c</fullName>
        <description>Device made by competition.</description>
        <formula>ptt_Device__r.sf42_de_Competition_Device__c</formula>
        <inlineHelpText>Device made by competition.</inlineHelpText>
        <label>Competition Device</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ptt_Country__c</fullName>
        <formula>ptt_Account__r.sf42_Country__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Device_ID__c</fullName>
        <label>Device ID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Device</label>
        <referenceTo>sf42_Devices__c</referenceTo>
        <relationshipLabel>References</relationshipLabel>
        <relationshipName>References</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ptt_Industry__c</fullName>
        <formula>TEXT(ptt_Account__r.Industry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_NDT__c</fullName>
        <formula>ptt_Device__r.sf42_gl_NDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NDT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ptt_Reminder__c</fullName>
        <label>Reminder</label>
        <length>768</length>
        <type>Html</type>
    </fields>
    <label>PT - Reference</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_references_for_ALI</fullName>
        <columns>NAME</columns>
        <columns>ptt_Account__c</columns>
        <columns>ptt_Industry__c</columns>
        <columns>ptt_Country__c</columns>
        <columns>ptt_ALI__c</columns>
        <columns>ptt_CM__c</columns>
        <columns>ptt_NDT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ptt_ALI__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All references for ALI</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_references_for_CM</fullName>
        <columns>NAME</columns>
        <columns>ptt_Account__c</columns>
        <columns>ptt_Industry__c</columns>
        <columns>ptt_Country__c</columns>
        <columns>ptt_ALI__c</columns>
        <columns>ptt_CM__c</columns>
        <columns>ptt_NDT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ptt_CM__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All references for CM</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_references_for_NDT</fullName>
        <columns>NAME</columns>
        <columns>ptt_Account__c</columns>
        <columns>ptt_Industry__c</columns>
        <columns>ptt_Country__c</columns>
        <columns>ptt_ALI__c</columns>
        <columns>ptt_CM__c</columns>
        <columns>ptt_NDT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ptt_NDT__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All references for NDT</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_references_for_one_country</fullName>
        <columns>NAME</columns>
        <columns>ptt_Account__c</columns>
        <columns>ptt_Industry__c</columns>
        <columns>ptt_Country__c</columns>
        <columns>ptt_ALI__c</columns>
        <columns>ptt_CM__c</columns>
        <columns>ptt_NDT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ptt_Country__c</field>
            <operation>equals</operation>
            <value>Germany</value>
        </filters>
        <label>All references for one country</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_references_for_one_industry</fullName>
        <columns>NAME</columns>
        <columns>ptt_Account__c</columns>
        <columns>ptt_Country__c</columns>
        <columns>ptt_Industry__c</columns>
        <columns>ptt_ALI__c</columns>
        <columns>ptt_CM__c</columns>
        <columns>ptt_NDT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ptt_Industry__c</field>
            <operation>equals</operation>
            <value>Cement</value>
        </filters>
        <label>All references for one industry</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_references_for_one_product</fullName>
        <columns>NAME</columns>
        <columns>ptt_Account__c</columns>
        <columns>ptt_Industry__c</columns>
        <columns>ptt_Country__c</columns>
        <columns>ptt_ALI__c</columns>
        <columns>ptt_CM__c</columns>
        <columns>ptt_NDT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>OPTALIGN smart</value>
        </filters>
        <label>All references for one product</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Competitive_Devices</fullName>
        <columns>NAME</columns>
        <columns>ptt_Account__c</columns>
        <columns>ptt_Country__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ptt_Competition_Device__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Competitive Devices</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Device</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>References</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>